# teri-teri

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/teri_teri/: config.py  crud.py  database.py  main.py
src/teri_teri/cogs/: base.py  data_manager.py  equipdex.py
